# double_descent_uncertainty

./: README.md  environment.yml  install.sh  main.ipynb  search_beta.sh  state_evolution.ipynb
core/: __init__.py  temperature_scaling.py  utility.py
core/amp/: gamp.py
core/amp/likelihood/: __init__.py  base_likelihood.py  bo_logit_likelihood.py  erm_logit_likelihood.py  logit_likelihood.py  probit_likelihood.py
core/amp/prior/: gaussian_prior.py  nonseparable_gaussian_prior.py
core/erm/: bootstrap_logistic_regression.py  logistic_regression.py  probit_regression.py
data/: erm_lambda_error.csv  erm_lambda_loss.csv  lambda_evidence.csv  pb_lambda_error.csv  search_optimal_lambda.csv
experiments/: bayes_optimal.ipynb  eb_error.ipynb  eb_evidence.ipynb  erm_error.ipynb  erm_lambda_0.ipynb  erm_loss.ipynb  search_lambda.py  search_optimal_lambda.py  simulations.py
gcmpyo3/: Cargo.toml  README.md
gcmpyo3/src/: lib.rs
gcmpyo3/src/gcmrust/: mod.rs
gcmpyo3/src/gcmrust/channels/: base_channel.rs  erm_logistic.rs  mod.rs  normalized_pseudo_bayes_logistic.rs  pseudo_bayes_logistic.rs  ridge_regression.rs
gcmpyo3/src/gcmrust/data_models/: base_partition.rs  base_prior.rs  gaussian.rs  gcm.rs  logit.rs  matching.rs  mod.rs  probit.rs
gcmpyo3/src/gcmrust/python/: evidence.rs  state_evolution.rs  utility.rs
gcmpyo3/src/gcmrust/state_evolution/: integrals.rs  mod.rs  state_evolution.rs
gcmpyo3/src/gcmrust/utility/: approximation.rs  constants.rs  errors.rs  evidence.rs  kappas.rs  mod.rs
